# clinical-inference-workstation

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: azure-deploy.yml  ci.yml
artifacts/latest/: MODEL_CARD.md  adjudication_comparison_example.json  adjudication_escalation_example.jsonl  adjudication_result_example.json  adjudication_trace_example.json  api_response_example.json  audit_log_example.jsonl  calibration.json  comparison.json  doe_results.csv  doe_summary.json  metrics.json  model.json  predictions.json  report_example.md  review_queue_example.jsonl  reviewed_labels_example.json  thresholds.json
configs/: decision_rules.yaml  synthetic_data.yaml  training.yaml
configs/adjudication_prompts/: evidence_collector.md  label_reviewer.md  review_router.md  safety_checker.md
dashboard/: app.py  requirements.txt
docs/: agentic-adjudication.md  architecture.md  capability-map.md  demo-walkthrough.md  deployment.md  doe-parameter-sweeps.md  evaluation-dashboard.md  labeling-methodology.md  limitations.md  methodology.md  pathway-coverage.md  portfolio-context.md  reference-image-provenance.md
scripts/: _bootstrap.py  bootstrap_demo.py  calibrate_model.py  evaluate_model.py  export_reviewed_labels.py  generate_dataset.py  generate_report.py  label_images.py  run_adjudication_workflow.py  run_api.py  run_doe_sweep.py  run_workstation.py  train_model.py  verify_deployment.py
tests/api/: test_app.py  (+1 more)
web/: app.js  index.html  public-cases.json  styles.css
(+45 files in other folders)
