[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-inference-workstation"
version = "0.1.0"
description = "Synthetic triage workstation: a portfolio-safe analogue of applied clinical ML work"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "PyYAML>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
